--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,4 +22,5 @@ jobs:
         port: 22
         script: |
           cd /var/www/polycoid
+          echo '${{ secrets.ENV }}' > .env
           ./deploy.sh
