Finaliesd login; added API

--- a/polycoid_main/.env.dst
+++ b/polycoid_main/.env.dst
@@ -13,3 +13,9 @@ DATABASE_PASSWORD=userpassword
 DATABASE_HOST=xxx.xxx.xxx.xxx
 # '' in prod
 DATABASE_PORT=xxxx
+
+# email settings
+EMAIL_HOST=smtp.xxxxx.xxx
+EMAIL_PORT=587
+EMAIL_HOST_USER=xxx@xxx.xxx
+EMAIL_HOST_PASSWORD=xxx
