--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,23 +5,36 @@ on:
     branches:
       - main
 
+env:
+  # Use docker.io for Docker Hub if empty
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository_owner }}/polycoid_main:latest
+
 jobs:
-  deploy:
+  publish:
+    name: publish image
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - name: Login
+      run: |
+        echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
+    - name: Build and Publish
+      run: |
+        docker build . --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+  deploy:
+    needs: publish
+    name: deploy image
+    runs-on: ubuntu-latest
 
-    - name: Deploy to the server
-      uses: appleboy/ssh-action@v0.1.3
+    steps:
+    - uses: appleboy/ssh-action@v0.1.3
       with:
         host: ${{ secrets.SERVER_IP }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: 22
         script: |
-          cd /var/www/polycoid
-          printf '%s' "${{ secrets.ENV }}" > polycoid_main/.env
-          whoami
-          ./deploy.sh
+          cd /home/${{ secrets.SERVER_USER }}/polycoid && docker compose pull && docker compose up -d
