--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,7 +8,7 @@ on:
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository_owner }}/polycoid_main:latest
+  IMAGE_NAME: ${{ github.repository }}/polycoid_main:latest
 
 jobs:
   publish:
@@ -16,26 +16,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Login
-      run: |
-        echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
-    - name: Build and Publish
-      run: |
-        docker compose build
-        docker tag polycoid_main:latest ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-  deploy:
-    needs: publish
-    name: deploy image
-    runs-on: ubuntu-latest
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Create env file
+        run: |
+          touch .env
+          echo "${{ secrets.SERVER_ENV_PROD }}" > .env
+          cat .env
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push Docker image
+        id: push
+        uses: docker/build-push-action@v6
+        with:
+          context: docker-compose.prod.yml
+          push: true
+          tags: ${{ env.IMAGE_NAME }}
+  # deploy:
+  #   needs: publish
+  #   name: deploy image
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - uses: appleboy/ssh-action@v0.1.3
-      with:
-        host: ${{ secrets.SERVER_IP }}
-        username: ${{ secrets.SERVER_USER }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        port: 22
-        script: |
-          cd /home/${{ secrets.SERVER_USER }}/polycoid && docker compose pull && docker compose up -d
+  #   steps:
+  #   - uses: appleboy/ssh-action@v0.1.3
+  #     with:
+  #       host: ${{ secrets.SERVER_IP }}
+  #       username: ${{ secrets.SERVER_USER }}
+  #       key: ${{ secrets.SSH_PRIVATE_KEY }}
+  #       port: 22
+  #       script: |
+  #         cd /home/${{ secrets.SERVER_USER }}/polycoid && docker compose pull && docker compose up -d
