--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,31 +1,37 @@
-name: Deploy Docker image
+name: Build and Push Docker Compose Images to GHCR
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  Deploy:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Code
+      - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Create env file
-        run: |
-          touch .env
-          echo "${{ secrets.SERVER_ENV_PROD }}" > .env
-          cat .env
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and Push Docker Image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: |
-            ghcr.io/seeeebaaaa/seeeebaaaa-polycoid:latest
+
+      - name: Build and Push Django Image
+        run: |
+          docker-compose -f docker-compose.prod.yml build django
+          docker-compose -f docker-compose.prod.yml push django
+
+      - name: Build and Push Nginx Image
+        run: |
+          docker-compose -f docker-compose.prod.yml build nginx
+          docker-compose -f docker-compose.prod.yml push nginx
