--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,6 +22,13 @@ jobs:
           touch .env
           echo "${{ secrets.SERVER_ENV_PROD }}" > .env
 
+      - name: Copy SSL secrets
+        run: |
+          touch ./polycoid.com_ssl_certificate.crt.pem 
+          echo "${{ secrets.POLYCOID_SSL_CERTIFICATE }}" > ./polycoid.com_ssl_certificate.crt.pem 
+          touch ./*.polycoid.com_private_key.key.pem
+          echo "${{ secrets.POLYCOID_PRIVATE_KEY }}" > ./*.polycoid.com_private_key.key.pem
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
