--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -7,3 +7,6 @@ RUN mkdir /etc/nginx/ssl
 
 COPY ./polycoid.com_ssl_certificate.crt.pem /etc/nginx/ssl/public.crt.pem
 COPY ./*.polycoid.com_private_key.key.pem /etc/nginx/ssl/private.key.pem
+
+# EXPOSE 443
+# EXPOSE 80
