--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -65,6 +65,9 @@ jobs:
           script: |
             cd /home/uwu/polycoid
             echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+            touch .env
+            echo "${{ secrets.SERVER_ENV_PROD }}" > .env
+            export $(grep -v '^#' .env | xargs -d '\n')
             docker compose pull
             docker compose down
             docker compose up -d
