--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -68,6 +68,6 @@ jobs:
             touch .env
             echo "${{ secrets.SERVER_ENV_PROD }}" > .env
             export $(grep -v '^#' .env | xargs -d '\n')
-            docker compose pull
-            docker compose down
-            docker compose up -d
+            sudo docker compose pull
+            sudo docker compose down
+            sudo docker compose up -d
