--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,7 +8,36 @@ on:
     branches:
       - main
 jobs:
-  build:
+  build_django:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Create env file
+        run: |
+          touch .env
+          echo "${{ secrets.SERVER_ENV_PROD }}" > .env
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and Push Django Image
+        run: |
+          docker compose -f docker-compose.prod.yml build django
+          docker compose -f docker-compose.prod.yml push django
+  
+  build_nginx:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -38,12 +67,7 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and Push Django Image
-        run: |
-          docker compose -f docker-compose.prod.yml build django
-          docker compose -f docker-compose.prod.yml push django
-
+         
       - name: Build and Push Nginx Image
         run: |
           docker compose -f docker-compose.prod.yml build nginx
@@ -51,7 +75,9 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: 
+      - build_django
+      - build_nginx
     permissions:
       contents: read
       packages: write
